--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -24,6 +24,7 @@ packages/repository/* @raymondfeng
 packages/repository-json-schema/* @bajtos
 packages/rest/* @bajtos @raymondfeng
 packages/service-proxy/* @raymondfeng
+packages/socketio/* @raymondfeng
 packages/testlab/* @bajtos
 packages/tsdocs/* @raymondfeng
 examples/todo/* @bajtos @hacksparrow
