--- a/packages/openapi-v3/package.json
+++ b/packages/openapi-v3/package.json
@@ -54,5 +54,6 @@
     "@loopback/repository-json-schema": "^1.6.0",
     "debug": "^4.0.1",
     "lodash": "^4.17.11"
-  }
+  },
+  "private": true
 }
