--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
     "@commitlint/travis-cli": "^7.6.1",
+    "@types/jest": "^24.0.13",
     "@types/mocha": "^5.0.0",
     "coveralls": "^3.0.0",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^2.3.0",
+    "jest": "^24.8.0",
     "lerna": "^3.14.1",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   },
