--- a/packages/context/package.json
+++ b/packages/context/package.json
@@ -48,7 +48,8 @@
     "index.d.ts",
     "dist",
     "src",
-    "!*/__tests__"
+    "!*/__tests__",
+    "!*/__examples__"
   ],
   "repository": {
     "type": "git",
