--- a/packages/authorization/package.json
+++ b/packages/authorization/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@loopback/authorization",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A LoopBack component for authorization support.",
   "engines": {
-    "node": ">=8"
+    "node": ">=8.9"
   },
   "scripts": {
     "acceptance": "lb-mocha \"dist/__tests__/acceptance/**/*.js\"",
     "build": "lb-tsc es2017 --outDir dist",
-    "build:apidocs": "lb-apidocs",
-    "clean": "lb-clean loopback-authorization*.tgz dist package api-docs",
+    "clean": "lb-clean loopback-authorization*.tgz dist package",
     "integration": "lb-mocha \"dist/__tests__/integration/**/*.js\"",
     "prepublishOnly": "npm run build && npm run build:apidocs",
     "pretest": "npm run build",
@@ -29,7 +28,7 @@
     "@loopback/build": "^1.5.2",
     "@loopback/testlab": "^1.2.7",
     "@types/debug": "^4.1.4",
-    "casbin": "^2.0.4"
+    "casbin": "^3.0.0"
   },
   "keywords": [
     "LoopBack",
