--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -21,6 +21,7 @@ packages/openapi-spec-builder/* @bajtos @raymondfeng
 packages/openapi-v3/* @bajtos @jannyHou
 packages/openapi-v3-types/* @bajtos @jannyHou
 packages/repository/* @raymondfeng
+packages/repository-tests/* @bajtos
 packages/repository-json-schema/* @bajtos
 packages/rest/* @bajtos @raymondfeng
 packages/service-proxy/* @raymondfeng
