feat: mongodb tests for DefaultCrudRepository
Signed-off-by: Miroslav Bajtoš <mbajtoss@gmail.com>

--- a/.prettierignore
+++ b/.prettierignore
@@ -5,6 +5,7 @@ packages/cli/generators/*/templates
 packages/tsdocs/fixtures/monorepo/docs
 packages/tsdocs/fixtures/monorepo/**/dist
 **/.sandbox
+acceptance/*/dist
 packages/*/dist
 examples/*/dist
 benchmark/dist
