--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,16 @@ matrix:
       os: linux
       env: TASK=verify-docs
       script: ./bin/verify-doc-changes.sh
+    - node_js: "10"
+      os: linux
+      env:
+        - TASK=test-repository-mongodb
+      services:
+        - mongodb
+      script:
+        - npm run postinstall -- --scope "@loopback/test-repository-mongodb" --include-filtered-dependencies --force-local
+        - npm run build -- --scope "@loopback/test-repository-mongodb" --include-filtered-dependencies
+        - cd acceptance/repository-mongodb && npm run mocha
 
 branches:
   only:
